Adding Some Tests

--- a/GymChanger/Views/Account/Index.cshtml
+++ b/GymChanger/Views/Account/Index.cshtml
@@ -4,12 +4,11 @@
 @{
     ViewData["Title"] = "Ваш профиль";
 }
+
 <style>
     body {
-        margin-top: 20px;
-        color: #1a202c;
         text-align: left;
-        background-color: #e2e8f0;
+        background-color: #fff;
     }
 
     .main-body {
@@ -26,9 +25,8 @@
         flex-direction: column;
         min-width: 0;
         word-wrap: break-word;
-        background-color: #fff;
         background-clip: border-box;
-        border: 0 solid rgba(0,0,0,.125);
+        border: 1px solid rgba(0,0,0,.125);
         border-radius: .25rem;
     }
 
