--- a/GymChanger/Views/Course/Create.cshtml
+++ b/GymChanger/Views/Course/Create.cshtml
@@ -38,5 +38,5 @@
             <option>Выберите тренера</option>
         </select>
     </div>
-    <button type="submit" style="font-size: 17px; width: 10%" class="btn btn-outline-success mt-2">Submit</button>
+    <button type="submit" style="font-size: 15px" class="btn btn-outline-success mt-2">Отправить</button>
 </form>
