--- a/GymChanger/Views/Shared/_Layout.cshtml
+++ b/GymChanger/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-2 p-2">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Course" asp-action="Index">GymManagement</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Course" asp-action="Index">GymChanger</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Расписание курсов</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="#" asp-action="#">Цены</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="Index">Цены</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="#" asp-action="#">О клубе</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="AboutUs">О клубе</a>
                         </li>
                         @if (User.IsInRole(UserRoles.Admin))
                         {
@@ -59,7 +59,7 @@
                             </li>
                             <li>
                                 <form asp-area="" asp-controller="Account" asp-action="Logout">
-                                    <button class="btn btn-outline-danger">Logout</button>
+                                    <button class="btn btn-outline-danger">Выйти</button>
                                 </form>
                             </li>
                         }
